# boris-clip

./: .gitignore  LICENSE  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  index.md  installation.md  reference.md  usage.md
src/boris_clip/: __init__.py  cli.py  cli_utils.py  clip.py  models.py  parse.py  probe.py  validate.py
tests/: test_clip.py  test_parse.py  test_validate.py
